# Organizador_de_Carpetas

./: .gitignore  README.md  abrir-organizador.bat  pyproject.toml
packaging/: run_menu.py
scripts/: build-exe.bat
src/organizer_cli/: __init__.py  analyzer.py  branding.py  cleanup_review.py  cli.py  date_organization.py  models.py  mover.py  planner.py  reporter.py  rules.py  scanner.py
tests/: test_analyzer.py  test_branding.py  test_cleanup_review.py  test_cli.py  test_mover.py  test_planner.py  test_reporter.py  test_rules.py  test_scanner.py
