[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "organizador-de-carpetas"
version = "0.1.0"
description = "CLI seguro para organizar archivos sueltos de una carpeta con preview primero."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13,<16",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
packaging = [
  "pyinstaller>=6,<7",
]

[project.scripts]
organizer = "organizer_cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
[tool.hatch.build.targets.wheel]
packages = ["src/organizer_cli"]
